src/test/deca/context/valid/exemple_sans_objet.deca
// Description:
//    Exemple sans objet
//
// Resultats:
//    0.5*valeur_rentree**2
// 
// Historique:
//    cree le 09/01/2025
{
int x ;
x=readInt() ;
println(0.5*(x*x)) ;
}