src/test/deca/context/invalid/field_protected_3.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{   
    protected int x;
    
}

{
 A a = new A();
 a.x;
}